// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kol-skeleton should render with _name="" 1`] = `
<kol-skeleton>
  <template shadowrootmode="open">
    <div class="kol-skeleton">
      <div class="kol-skeleton__container">
        <div class="kol-skeleton__counter">
          Count: 0
        </div>
      </div>
      <div class="kol-skeleton__actions">
        <button class="kol-click-button">
          <span class="kol-click-button__label">
            Label
          </span>
        </button>
      </div>
    </div>
  </template>
</kol-skeleton>
`;

exports[`kol-skeleton should render with _name="Ada Lovelace" 1`] = `
<kol-skeleton>
  <template shadowrootmode="open">
    <div class="kol-skeleton kol-skeleton--has-name">
      <div class="kol-skeleton__container">
        <span class="kol-skeleton__name">
          Ada Lovelace
        </span>
        <div class="kol-skeleton__counter">
          Count: 0
        </div>
      </div>
      <div class="kol-skeleton__actions">
        <button class="kol-click-button">
          <span class="kol-click-button__label">
            Label
          </span>
        </button>
      </div>
    </div>
  </template>
</kol-skeleton>
`;
